test delete button

--- a/Learn-API/soccer-player-api/views/index.ejs
+++ b/Learn-API/soccer-player-api/views/index.ejs
@@ -13,7 +13,7 @@
     <form action="/players" method="POST">
       <input type="text" placeholder="name" name="name" />
       <input type="text" placeholder="club" name="club" />
-      <button type="submit" class='submitButton'>Submit</button>
+      <button type="submit" class="submitButton">Submit</button>
     </form>
 
     <h2>Players</h2>
@@ -23,11 +23,20 @@
       <li class="players">
         <span><%= players[i].name %></span>:
         <span><%= players[i].club %></span>
-        <button class="dataDeleteNameButton">Delete</button>
+        <button
+          class="dataDeleteNameButton"
+          data-id="<%=players[i]._id%>"
+        >
+          Delete
+        </button>
       </li>
       <% } %>
     </ul>
-    
-    <script type="text/javascript" src="js/main.js"></script>
+
+    <script
+      type="text/javascript"
+      src="../client-side-soccer-player/js/main.js"
+    >
+    </script>
   </body>
 </html>
